Fix horizontal overflow issues

--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -4,3 +4,7 @@
     display: block;
   }
 }
+
+html {
+  overflow-x: hidden;
+}
